testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport2.errors.txt
usage.js(1,19): error TS2307: Cannot find module './lateBoundAssignmentDeclarationSupport2.js' or its corresponding type declarations.


==== usage.js (1 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport2.js");
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './lateBoundAssignmentDeclarationSupport2.js' or its corresponding type declarations.
    const y = x["my-fake-sym"];
    const z = x[x.S];
    
==== lateBoundAssignmentDeclarationSupport2.js (0 errors) ====
    // currently unsupported
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    module.exports[_sym] = "ok";
    module.exports[_str] = "ok";
    module.exports.S = _sym;